<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6EEB8"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/tienda_de_ropa"
            android:textAlignment="center"
            android:textColor="#F34983"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/elja_tipo_de_entrega"
            android:textSize="25sp"
            tools:ignore="TextSizeCheck" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbRetiro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retiro_en_tienda"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbDomicilio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entrega_a_domicilio"
                android:textSize="20sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productos"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="222dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                tools:srcCompat="@drawable/conjunto1" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lleva_el_conjunto_o_prenda_que_elijas"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxpolera"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/polera_negra_5000"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkBoxZapatilla"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/zapatillas_45000"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxBolso"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bolso_6000"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkBoxBuzo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/buzo_25000"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Productos"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="143dp"
                tools:srcCompat="@drawable/conjunto2" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="¡Lleva el conjunto o prenda que elijas!"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxPantalon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pantalon_negro_20000"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkBoxZapatillas2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zapatillas_40000"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxCamisa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/camisa_m_15000"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkBoxAccesorio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/accesorios_40000"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="67dp"

                android:entries="@array/doc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCalcular"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:text="@string/calcular" />

                <Button
                    android:id="@+id/btnCancelar"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancelar" />

            </LinearLayout>


            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_a_pagar"
                android:textSize="34sp" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>